src/style/App.scss
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');

body {
    padding: 50px;
}

.BannerBar {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 20px;
    padding-bottom: 20px;

    img {
        width: 100%;
        height: 223px;
        overflow: hidden;
        object-fit: cover;
        border-radius: 20px;
        filter: brightness(50%);
    }

    P {
        font-family: "Montserrat", sans-serif;
        font-weight: 700;
        font-size: 3em;
        position: absolute;
        color: white;
        z-index: 1;
        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);

    }
}

.footerbar {
    display: flex;
    justify-content: center;
    background-color: black;
    flex-direction: column;
    align-items: center; /* Centre les éléments horizontalement et verticalement */
    padding-top: 40px;
    padding-bottom: 15px;

    img {
      max-width: 100%; /* Assure que l'image ne dépasse pas sa taille d'origine */
      height: auto; /* Maintient le ratio hauteur/largeur de l'image */
      /* background-color: white; */ /* Ce commentaire est incorrect, ne s'applique pas à une image */
    }

    p {
        font-family: "Montserrat", sans-serif;
        color: white;
        text-align: center; /* Centre le texte horizontalement */
        margin: 0;
        padding-top: 30px;
    }
}

.Navbar {
    font-family: "Montserrat", sans-serif;
    font-weight: 500;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 20px 40px;

    li {
        display: flex;
        flex-direction: row;
    } 

    img {

    }
}

$gap: 100px;

.CardsContainer {
    display: flex;
    flex-wrap: wrap;
    gap: $gap;
    justify-content: space-between; // Pour aligner 3 cartes par ligne (si possible)

}

.Card {
    width: calc((100% - 2*$gap) / 3); // Calcule la largeur pour 3 cartes par ligne avec espace entre elles
    position: relative;

    img {
        display: block;
        width: 100%;
        height: 100%;
        object-fit: cover; // Pour que l'image couvre la carte sans se déformer
        border-radius: 8px; // Bordure arrondie si nécessaire
    }


    p {
        position: absolute;
        font-family: 'Montserrat', sans-serif;
        font-weight: 700;
        bottom: 0;
        left: 0;
        padding: 10px; // Ajustez selon vos besoins
        color: white;
        font-family: 'Montserrat', sans-serif; // Utilisation de la police Montserrat
        border-bottom-left-radius: 8px; // Bordure arrondie bas-gauche
        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
    }
    
}

.Accordion {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
    padding-bottom: 38px;

    div {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 1000px;
    }

    h2 {
        background-color:#FF6060 ;
        margin: 0;
        width: 1250px;

    }

    svg {
        z-index: 1;
        margin-left: 10px;
    }

}

